force-app/force-app/force-app/main/default/objects/Product2/fields/Active_To__c.field-meta.xml
<CustomField>
    <fullName>Active_To__c</fullName>
    <label>Active To</label>
    <type>Date</type>
</CustomField>