force-app/force-app/force-app/main/default/objects/Product2/fields/Additional_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Additional_Identifier__c</fullName>
    <label>Additional Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>