force-app/force-app/force-app/main/default/objects/Product2/fields/Assessable_Value__c.field-meta.xml
<CustomField>
    <fullName>Assessable_Value__c</fullName>
    <label>Assessable Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>