force-app/force-app/force-app/main/default/objects/Product2/fields/Assessable_Value_For_WTR__c.field-meta.xml
<CustomField>
    <fullName>Assessable_Value_For_WTR__c</fullName>
    <label>Assessable Value For WTR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>