force-app/force-app/force-app/main/default/objects/Product2/fields/CBM__c.field-meta.xml
<CustomField>
    <fullName>CBM__c</fullName>
    <label>CBM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>