force-app/force-app/force-app/main/default/objects/Product2/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <label>Country of Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>