force-app/force-app/force-app/main/default/objects/Product2/fields/Customer_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Material_Code__c</fullName>
    <label>Customer Material Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>