force-app/force-app/force-app/main/default/objects/Product2/fields/Customer_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Description__c</fullName>
    <label>Customer Product Description</label>
    <type>TextArea</type>
</CustomField>