force-app/force-app/force-app/main/default/objects/Product2/fields/Excisable__c.field-meta.xml
<CustomField>
    <fullName>Excisable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excisable</label>
    <type>Checkbox</type>
</CustomField>