force-app/force-app/force-app/main/default/objects/Product2/fields/Foreign_Name__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Name__c</fullName>
    <label>Foreign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>