force-app/force-app/force-app/main/default/objects/Product2/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST</label>
    <type>Checkbox</type>
</CustomField>