force-app/force-app/force-app/main/default/objects/Product2/fields/InActive__c.field-meta.xml
<CustomField>
    <fullName>InActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InActive</label>
    <type>Checkbox</type>
</CustomField>