force-app/force-app/force-app/main/default/objects/Product2/fields/Lip__c.field-meta.xml
<CustomField>
    <fullName>Lip__c</fullName>
    <label>Lip/Reg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>RPAD</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>LIP</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>WHITE</fullName>
            </value>
            <value>
                <fullName>FITMENT</fullName>
                <isActive>false</isActive>
                <label>FITMENT</label>
            </value>
            <value>
                <fullName>REGULAR</fullName>
                <isActive>false</isActive>
                <label>REGULAR</label>
            </value>
            <value>
                <fullName>TUBES</fullName>
                <isActive>false</isActive>
                <label>TUBES</label>
            </value>
            <value>
                <fullName>WHEEL HUB</fullName>
                <isActive>false</isActive>
                <label>WHEEL HUB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>