force-app/force-app/force-app/main/default/objects/Product2/fields/Lip_Reg__c.field-meta.xml
<CustomField>
    <fullName>Lip_Reg__c</fullName>
    <label>Lip/Reg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lip</fullName>
            </value>
            <value>
                <fullName>Reg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>