force-app/force-app/force-app/main/default/objects/Product2/fields/LUG__c.field-meta.xml
<CustomField>
    <fullName>LUG__c</fullName>
    <label>LUG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IND01</fullName>
            </value>
            <value>
                <fullName>RPAD</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>SKT 01</fullName>
            </value>
            <value>
                <fullName>IMT 01</fullName>
            </value>
            <value>
                <fullName>SKT 05</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>IND 01</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>IND 04</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>FITMENT</fullName>
                <isActive>false</isActive>
                <label>FITMENT</label>
            </value>
            <value>
                <fullName>I4</fullName>
                <isActive>false</isActive>
                <label>I4</label>
            </value>
            <value>
                <fullName>IMT01</fullName>
                <isActive>false</isActive>
                <label>IMT01</label>
            </value>
            <value>
                <fullName>K</fullName>
                <isActive>false</isActive>
                <label>K</label>
            </value>
            <value>
                <fullName>Lug</fullName>
                <isActive>false</isActive>
                <label>Lug</label>
            </value>
            <value>
                <fullName>Rib</fullName>
                <isActive>false</isActive>
                <label>Rib</label>
            </value>
            <value>
                <fullName>SKT01</fullName>
                <isActive>false</isActive>
                <label>SKT01</label>
            </value>
            <value>
                <fullName>Smooth</fullName>
                <isActive>false</isActive>
                <label>Smooth</label>
            </value>
            <value>
                <fullName>TF01</fullName>
                <isActive>false</isActive>
                <label>TF01</label>
            </value>
            <value>
                <fullName>TTLT1</fullName>
                <isActive>false</isActive>
                <label>TTLT1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>