force-app/force-app/force-app/main/default/objects/Product2/fields/Management_Meyhod__c.field-meta.xml
<CustomField>
    <fullName>Management_Meyhod__c</fullName>
    <label>Management Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Every Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>