force-app/force-app/force-app/main/default/objects/Product2/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finished Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>