force-app/force-app/force-app/main/default/objects/Product2/fields/NM_Bl__c.field-meta.xml
<CustomField>
    <fullName>NM_Bl__c</fullName>
    <label>NM/Bl</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLACK</fullName>
            </value>
            <value>
                <fullName>RPAD</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>WHITE</fullName>
            </value>
            <value>
                <fullName>GREY</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Bl</fullName>
                <isActive>false</isActive>
                <label>Bl</label>
            </value>
            <value>
                <fullName>FITMENT</fullName>
                <isActive>false</isActive>
                <label>FITMENT</label>
            </value>
            <value>
                <fullName>NM</fullName>
                <isActive>false</isActive>
                <label>NM</label>
            </value>
            <value>
                <fullName>NMG</fullName>
                <isActive>false</isActive>
                <label>NMG</label>
            </value>
            <value>
                <fullName>NMY</fullName>
                <isActive>false</isActive>
                <label>NMY</label>
            </value>
            <value>
                <fullName>TUBES</fullName>
                <isActive>false</isActive>
                <label>TUBES</label>
            </value>
            <value>
                <fullName>WHEEL HUB</fullName>
                <isActive>false</isActive>
                <label>WHEEL HUB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>