force-app/force-app/force-app/main/default/objects/Product2/fields/Pricing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Unit__c</fullName>
    <label>Pricing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Numbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>