force-app/force-app/force-app/main/default/objects/Product2/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greckster</fullName>
            </value>
            <value>
                <fullName>EMRALD</fullName>
            </value>
            <value>
                <fullName>CARLISLE</fullName>
            </value>
            <value>
                <fullName>CONCORD</fullName>
            </value>
            <value>
                <fullName>ADDO INDIA</fullName>
            </value>
            <value>
                <fullName>GRECKSTER GOLD</fullName>
                <label>Greckster Gold</label>
            </value>
            <value>
                <fullName>EMRALD DICT</fullName>
            </value>
            <value>
                <fullName>EMPOWER</fullName>
                <label>Empower</label>
            </value>
            <value>
                <fullName>EMPOWER XT</fullName>
            </value>
            <value>
                <fullName>SOLIDTRAC</fullName>
            </value>
            <value>
                <fullName>ATLAS</fullName>
            </value>
            <value>
                <fullName>SUPERSTAR</fullName>
                <label>Superstar</label>
            </value>
            <value>
                <fullName>TARMAC</fullName>
            </value>
            <value>
                <fullName>SOLIDPLUS</fullName>
            </value>
            <value>
                <fullName>TRAXMAX</fullName>
            </value>
            <value>
                <fullName>BKP TRAXMAX</fullName>
            </value>
            <value>
                <fullName>JRS</fullName>
            </value>
            <value>
                <fullName>RAYBAR</fullName>
            </value>
            <value>
                <fullName>MARASTAR</fullName>
            </value>
            <value>
                <fullName>CEAT</fullName>
            </value>
            <value>
                <fullName>ATF</fullName>
            </value>
            <value>
                <fullName>GRECKSTER MEO</fullName>
            </value>
            <value>
                <fullName>MOBILE HOME</fullName>
            </value>
            <value>
                <fullName>FAUCON TIRES</fullName>
            </value>
            <value>
                <fullName>THOMASSEN METAALBOUW</fullName>
            </value>
            <value>
                <fullName>G-LIFT</fullName>
            </value>
            <value>
                <fullName>SALSONS</fullName>
            </value>
            <value>
                <fullName>TOUGH</fullName>
            </value>
            <value>
                <fullName>CLYDE</fullName>
            </value>
            <value>
                <fullName>SOLID MASTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>