force-app/force-app/force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPT</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>POB</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>RPAD</fullName>
            </value>
            <value>
                <fullName>SRT</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>DBW TYRES</fullName>
                <isActive>false</isActive>
                <label>DBW TYRES</label>
            </value>
            <value>
                <fullName>FLAPS</fullName>
                <isActive>false</isActive>
                <label>FLAPS</label>
            </value>
            <value>
                <fullName>POB TYRES</fullName>
                <isActive>false</isActive>
                <label>POB TYRES</label>
            </value>
            <value>
                <fullName>RIMS</fullName>
                <isActive>false</isActive>
                <label>RIMS</label>
            </value>
            <value>
                <fullName>SERVICES</fullName>
                <isActive>false</isActive>
                <label>SERVICES</label>
            </value>
            <value>
                <fullName>SFG-WHEEL HUB</fullName>
                <isActive>false</isActive>
                <label>SFG-WHEEL HUB</label>
            </value>
            <value>
                <fullName>SOLID TYRES</fullName>
                <isActive>false</isActive>
                <label>SOLID TYRES</label>
            </value>
            <value>
                <fullName>TUBES</fullName>
                <isActive>false</isActive>
                <label>TUBES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>