force-app/force-app/force-app/main/default/objects/Product2/fields/Product_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Code__c</fullName>
    <label>Product Group Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>