force-app/force-app/force-app/main/default/objects/Product2/fields/Product_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Name__c</fullName>
    <label>Product Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>