force-app/force-app/force-app/main/default/objects/Product2/fields/Purchase_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Item</label>
    <type>Checkbox</type>
</CustomField>