force-app/force-app/force-app/main/default/objects/Product2/fields/RW_PR__c.field-meta.xml
<CustomField>
    <fullName>RW_PR__c</fullName>
    <label>RW/PR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPAD</fullName>
            </value>
            <value>
                <fullName>2.50</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>10PR</fullName>
            </value>
            <value>
                <fullName>12PR</fullName>
            </value>
            <value>
                <fullName>14PR</fullName>
            </value>
            <value>
                <fullName>7.50</fullName>
            </value>
            <value>
                <fullName>7.00</fullName>
            </value>
            <value>
                <fullName>8.00</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>8.50</fullName>
            </value>
            <value>
                <fullName>10.00</fullName>
            </value>
            <value>
                <fullName>4.00</fullName>
            </value>
            <value>
                <fullName>8PR</fullName>
            </value>
            <value>
                <fullName>3.00</fullName>
            </value>
            <value>
                <fullName>4.33</fullName>
            </value>
            <value>
                <fullName>4PR</fullName>
            </value>
            <value>
                <fullName>6.50</fullName>
            </value>
            <value>
                <fullName>6.00</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>6PR</fullName>
            </value>
            <value>
                <fullName>16PR</fullName>
            </value>
            <value>
                <fullName>9.75</fullName>
            </value>
            <value>
                <fullName>11.00</fullName>
            </value>
            <value>
                <fullName>3.75</fullName>
            </value>
            <value>
                <fullName>4.50</fullName>
            </value>
            <value>
                <fullName>5.00</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>5.50</fullName>
            </value>
            <value>
                <fullName>18PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>