force-app/force-app/force-app/main/default/objects/Product2/fields/Sales_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Item</label>
    <type>Checkbox</type>
</CustomField>