force-app/force-app/force-app/main/default/objects/Product2/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 X 105 X 1000</fullName>
            </value>
            <value>
                <fullName>100 X 80 - 8</fullName>
            </value>
            <value>
                <fullName>10 X 16.5</fullName>
            </value>
            <value>
                <fullName>10.00 X 20</fullName>
            </value>
            <value>
                <fullName>10 X 4 X 6 1/2</fullName>
            </value>
            <value>
                <fullName>10 X 4 X 6 1/4</fullName>
            </value>
            <value>
                <fullName>10.00 X 75 - 15.3</fullName>
            </value>
            <value>
                <fullName>11.00 X 20</fullName>
            </value>
            <value>
                <fullName>11.5 X 80 - 15.3</fullName>
            </value>
            <value>
                <fullName>11L - 15SL</fullName>
            </value>
            <value>
                <fullName>12 X 16.5</fullName>
            </value>
            <value>
                <fullName>12.00 X 20</fullName>
            </value>
            <value>
                <fullName>12.00 X 24</fullName>
            </value>
            <value>
                <fullName>12 X 5 1/2 X 8</fullName>
            </value>
            <value>
                <fullName>12.5 X 80 - 15.3</fullName>
            </value>
            <value>
                <fullName>12.5 X 80 - 18</fullName>
            </value>
            <value>
                <fullName>12 X 5 X 8</fullName>
            </value>
            <value>
                <fullName>12.5L - 15SL</fullName>
            </value>
            <value>
                <fullName>13 1/2 X 5 X 8</fullName>
            </value>
            <value>
                <fullName>13 X 5 1/2 X 8</fullName>
            </value>
            <value>
                <fullName>140 X 55 - 9</fullName>
            </value>
            <value>
                <fullName>14 X 17.50</fullName>
            </value>
            <value>
                <fullName>14 X 17.5</fullName>
            </value>
            <value>
                <fullName>14.00 X 20</fullName>
            </value>
            <value>
                <fullName>14.00 X 24</fullName>
            </value>
            <value>
                <fullName>14 X 4 1/2 X 8</fullName>
            </value>
            <value>
                <fullName>15 X 19.5</fullName>
            </value>
            <value>
                <fullName>15 X 4 1/2 - 8</fullName>
            </value>
            <value>
                <fullName>15 X 5 X 11 1/4</fullName>
            </value>
            <value>
                <fullName>16 1/4 X 5 X 11 1/4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>