force-app/force-app/force-app/main/default/objects/Product2/fields/Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stock Item</label>
    <type>Checkbox</type>
</CustomField>