force-app/force-app/force-app/main/default/objects/Product2/fields/Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category__c</fullName>
    <label>Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>