force-app/force-app/force-app/main/default/objects/Product2/fields/Temp_Brand__c.field-meta.xml
<CustomField>
    <fullName>Temp_Brand__c</fullName>
    <label>Temp Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>