force-app/force-app/force-app/main/default/objects/Product2/fields/Tyre_TBL_TT_TTF_TWA_NA__c.field-meta.xml
<CustomField>
    <fullName>Tyre_TBL_TT_TTF_TWA_NA__c</fullName>
    <label>Tyre/TBL/TT/TTF/TWA/NA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tyre</fullName>
            </value>
            <value>
                <fullName>TBL</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>TTF</fullName>
            </value>
            <value>
                <fullName>TWA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>