force-app/force-app/force-app/main/default/objects/Product2/fields/Tyre_TTF_TL_TT__c.field-meta.xml
<CustomField>
    <fullName>Tyre_TTF_TL_TT__c</fullName>
    <label>Tyre/TTF/TL/TT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TUBELESS</fullName>
            </value>
            <value>
                <fullName>TYRE</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>FITMENT</fullName>
            </value>
            <value>
                <fullName>WHEEL HUB</fullName>
            </value>
            <value>
                <fullName>RPAD</fullName>
            </value>
            <value>
                <fullName>TTF</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>