force-app/force-app/force-app/main/default/objects/Product2/fields/Tyre_TWA_THA__c.field-meta.xml
<CustomField>
    <fullName>Tyre_TWA_THA__c</fullName>
    <label>Tyre/TWA/THA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TYRE</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>THA</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>FITMENT</fullName>
            </value>
            <value>
                <fullName>WHEEL HUB</fullName>
            </value>
            <value>
                <fullName>TWA</fullName>
            </value>
            <value>
                <fullName>RPAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>