force-app/force-app/force-app/main/default/objects/Product2/fields/UOM_Group__c.field-meta.xml
<CustomField>
    <fullName>UOM_Group__c</fullName>
    <label>UOM Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>