force-app/force-app/force-app/main/default/objects/Product2/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>TUBES</fullName>
            </value>
            <value>
                <fullName>FLAP</fullName>
            </value>
            <value>
                <fullName>NONMARKER</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>FITMENT</fullName>
            </value>
            <value>
                <fullName>WHEEL HUB</fullName>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
            </value>
            <value>
                <fullName>SUPER PREMIUM</fullName>
            </value>
            <value>
                <fullName>XTREME</fullName>
            </value>
            <value>
                <fullName>BUDGET</fullName>
            </value>
            <value>
                <fullName>ECONOMY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>